2005-11-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: 2.6.5
	
	* lily/pango-font.cc: backport: pango-font.cc, completely. This
	turns on TTF kerning.

	* scm/output-ps.scm (glyph-string): backport: use width in glyph-string

2005-11-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* GNUmakefile.in: backport of out-www excision.

	* scripts/*.py: update bug reporting addresses.  

	* lily/main.cc (LY_DEFINE): gmane address for reporting bugs.

2005-11-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/text-interface.cc (interpret_markup): remove assert(false).

2005-11-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/midi2ly.py (track_first_item): backport: only return
	non-null values.

2005-11-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py: quote shell arguments. 

2005-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-path.cc (find): Bugfix: Return name of file found.

	* lily/main.cc (setup_paths): Bugfix for argv0 logic.
	(setup_paths)[__CYGWIN__ || __MINGW32__ || ]: Normalize argv0.
	(setup_paths)[__MINGW32__]: Also look for argv0 + .exe.

2005-11-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths)[__MINGW32__]: Do not assume argv0 is
	absolute.  Better diagnostics.

2005-11-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths)[!__MINGW32__]: Bugfix: if argv0 is
	not absolute, make it absolute using PATH.

2005-10-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* python/midi.c (initmidi): Fix type for mingw.

2005-10-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/compile-vars.make (SHARED_FLAGS): Support mingw.

	* stepmake/stepmake/generic-vars.make (MINGW_BUILD): Detect mingw
	cross compiling.

	* stepmake/aclocal.m4: Support python cross compiling.

	* stepmake/stepmake/python-module-vars.make (SHARED_MODULE_SUFFIX):
	Add mingw section.

2005-10-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4 (STEPMAKE_PYTHON_DEVEL): Fixes for cross